--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": false,
   "type": "module",
   "bin": {
-    "gikendaasowin-aabajichiganan-mcp": "./build/index.js"
+    "gikendaasowin-aabajichiganan-mcp": "build/index.js"
   },
   "files": [
     "build"
@@ -29,7 +29,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/nbiish/gikendaasowin-aabajichiganan-mcp.git"
+    "url": "git+https://github.com/nbiish/gikendaasowin-aabajichiganan-mcp.git"
   },
   "author": "ᓂᐲᔥ ᐙᐸᓂᒥᑮ-ᑭᓇᐙᐸᑭᓯ (Nbiish Waabanimikii-Kinawaabakizi)",
   "license": "SEE LICENSE IN https://github.com/nbiish/license-for-all-works/blob/main/LICENSE",
