Update version to 0.3.9, enhance package description for clarity, and add additional repository URL in LICENSE. Document version history in README with improvements to tool descriptions and error handling for better reliability.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nbiish/gikendaasowin-aabajichiganan-mcp",
-  "version": "0.3.8",
-  "description": "ᑭᑫᓐᑖᓱᐎᓐ ᐋᐸᒋᒋᑲᓇᓐ - Gikendaasowin Aabajichiganan - (Cognitive Tools): A Model Context Protocol server providing advanced cognitive reasoning tools for AI agents",
+  "version": "0.3.9",
+  "description": "ᑭᑫᓐᑖᓱᐎᓐ ᐋᐸᒋᒋᑲᓇᓐ - Gikendaasowin Aabajichiganan - (Cognitive Tools v0.3.9): Provides a suite of advanced internal reasoning tools to guide an LLM agent in sophisticated problem-solving, emphasizing structured thought, planning, and self-correction.",
   "private": false,
   "type": "module",
   "bin": {
