feat: Update cognitive tools to v0.7.3, enhance .gitignore, and improve README documentation
- Updated version in package.json to 0.7.3 and revised description for clarity and alignment with AI Pair Programmer Prompt v0.7.2.
- Enhanced .gitignore to include additional patterns for temporary files and package manager backups.
- Updated README to reflect the new version and improved dual package publishing instructions.
- Renamed cognitive assessment tool from `assess_complexity_and_select_thought_mode` to `assess_cuc_n` for consistency and clarity.
- Removed outdated integration prompt file to streamline documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,23 @@
 node_modules/
 .npm/
 .yarn/
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # Build output
 build/
 dist/
 lib/
+out/
 
 # TypeScript
 *.tsbuildinfo
+*.d.ts.map
 
 # Logs
 logs/
@@ -28,6 +37,11 @@ lerna-debug.log*
 # OS
 .DS_Store
 Thumbs.db
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Desktop.ini
 
 # Editors
 .vscode/*
@@ -39,6 +53,14 @@ Thumbs.db
 *.swp
 *.swo
 .cursor/
+*.sublime-*
+*.atom/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+.history/
 
 # Testing
 coverage/
@@ -46,4 +68,24 @@ coverage/
 
 # Misc
 .cache/
-.temp/ 
+.temp/
+.eslintcache
+.stylelintcache
+.npm-backup/
+*.backup
+*.bak
+*.orig
+*.save
+tmp/
+temp/
+
+# Package manager backups
+package.json.backup
+package.json.bak
+package-lock.json.backup
+package-lock.json.bak
+
+# npm publish specific
+.npmrc
+.npmignore
+*.tgz 
