feat: Upgrade cognitive tools to v0.9.1 with enhanced features and documentation
- Updated version in package.json and package-cognitive-tools.json to 0.9.1, ensuring consistent versioning across packages.
- Revised descriptions to emphasize iterative refinement and tool integration for AI Pair Programming.
- Enhanced README to reflect the new version, detailing the comprehensive suite of cognitive tools and their functionalities.
- Added new entries to .gitignore for testing files and updated the LICENSE citation for clarity.
- Removed outdated integration prompt files to streamline documentation and improve clarity.

--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,6 @@ Desktop.ini
 .idea/
 *.swp
 *.swo
-.cursor/
 *.sublime-*
 *.atom/
 .project
@@ -89,3 +88,6 @@ package-lock.json.bak
 .npmrc
 .npmignore
 *.tgz 
+
+# testing
+testing/
