feat: Introduce new system prompt and update cognitive tools versioning
- Added a comprehensive new system prompt for the Gikendaasowin Cognitive Agent, detailing its role, guiding principles, and operational protocols.
- Updated version in package.json, package-cognitive-tools.json, and package-gikendaasowin.json to 0.9.6 for consistency across packages.
- Enhanced documentation to reflect the latest features and functionalities of the cognitive tools.
- Removed outdated integration prompt files to streamline documentation and improve clarity.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nbiish/gikendaasowin-aabajichiganan-mcp",
   "version": "0.9.4",
-  "description": "Cognitive Tools MCP: SOTA reasoning suite focused on iterative refinement and tool integration for AI Pair Programming. Enables structured, iterative problem-solving through Chain of Draft methodology, with tools for draft generation, analysis, and refinement. Features advanced deliberation (`think`), rapid checks (`quick_think`), mandatory complexity assessment & thought mode selection (`assess_cuc_n_mode`), context synthesis, confidence gauging, proactive planning, explicit reasoning (CoT), and reflection with content return. Alternative package name for cognitive-tools-mcp.",
+  "description": "The Gikendaasowin Aabajichiganan MCP (Meta-Cognitive Programming) framework provides a suite of tools and techniques for building AI agents capable of sophisticated reasoning, planning, and self-correction.",
   "private": false,
   "type": "module",
   "bin": {
