chore: Update .gitignore and critical.mdc for improved file management and documentation
- Enhanced .gitignore to include additional entries for cursor, Aider, and Copilot files, ensuring better management of temporary and configuration files.
- Revised critical.mdc to streamline instructions and update citation formatting, improving clarity and consistency in documentation.
- Removed outdated prompt and tools files to declutter the repository and enhance focus on current functionalities.

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,20 @@ package-lock.json.bak
 
 # testing
 testing/
+# Cursor files
+.cursor/
+.cursorignore
+.cursorindexingignore
+.cursorrules
+
+# Aider files
+.aider-instructions.md
+.aider.conf.yml
+.aiderignore
+.env.example
+
+# Copilot files
+.copilot/
+.copilotignore
+.rooignore
+.github/copilot-instructions.md
